# MultiSense-Viewer

./: .gitmodules  CMakeLists.txt
.github/workflows/: workflow_pr.yml
Resources/Assets/Projects/: DifferentiableRenderer.project
Resources/Assets/Shaders/: EditorImageViewportTexture.frag  EditorPathTracerTexture.frag  default2D.frag  defaultPhongLight.frag  defaultTexture.frag
Resources/Assets/Shaders/spv/: EditorImageViewportTexture.frag.spv  defaultPhongLight.frag.spv  defaultTexture.frag.spv
cmake/: Common.cmake
docs/: BUILD.md
include/Viewer/Core/: Definitions.h  MultiSenseDeviceDefinitions.h  VulkanRenderer.h
include/Viewer/ImGui/: GuiManager.h  Layer.h  LayerUtils.h  SideBarLayer.h
include/Viewer/ImGui/AdditionalWindows/: NewVersionAvailable.h
include/Viewer/ImGui/Custom/: imgui_user.h
include/Viewer/ImGui/MainLayerExt/: SensorConfigurationExt.h
include/Viewer/Tools/: Macros.h
old/3DGS/: GaussianModelGraphicsPipeline.cpp
src/CRLCamera/: CRLPhysicalCamera.cpp  CameraConnection.cpp
src/ImGui/: GuiManager.cpp  LayerFactory.cpp
src/Viewer/Application/: Application.cpp  Application.h  UsageMonitor.cpp
src/Viewer/Modules/MultiSense/: MultiSenseRendererBridge.h
src/Viewer/Modules/MultiSense/LibMultiSense/: LibMultiSenseConnector.h
src/Viewer/Rendering/: IMeshParameters.h  MeshData.cpp  MeshData.h
src/Viewer/Rendering/Components/: CameraComponent.h  Components.h  GaussianComponent.cpp  GaussianComponent.h  MaterialComponent.h  TransformComponent.h
src/Viewer/Rendering/Core/: Buffer.cpp  DescriptorRegistry.h  DescriptorSetManager.cpp  DescriptorSetManager.h  RenderDefinitions.h  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResourceManager.cpp  VulkanResourceManager.h  VulkanTexture.cpp  VulkanTexture.h
src/Viewer/Rendering/Editors/: ArcballCamera.h  BaseCamera.h  CameraDefinitions.h  CommonEditorFunctions.h  Editor.cpp  Editor.h  EditorDefinitions.h  EditorFactory.h  EditorIncludes.h  EditorUILayer.h  MenuLayer.h  PinholeCamera.h  SceneRenderer.cpp
src/Viewer/Rendering/Editors/3DViewport/: Editor3DLayer.h  Editor3DViewport.cpp  Editor3DViewport.h
src/Viewer/Rendering/Editors/DifferentiableEditor/: EditorDifferentiableRenderer.cpp  EditorDifferentiableRenderer.h  EditorDifferentiableRendererLayer.h  EditorDifferentiableRendererLayerUI.h
src/Viewer/Rendering/Editors/GaussianViewer/: EditorGaussianViewer.cpp  EditorGaussianViewer.h
src/Viewer/Rendering/Editors/ImageEditor/: EditorImage.cpp  EditorImage.h  EditorImageLayer.h  EditorImageUI.h
src/Viewer/Rendering/Editors/PathTracer/: EditorPathTracer.cpp  EditorPathTracer.h  EditorPathTracerLayer.cpp  EditorPathTracerLayer.h  EditorPathTracerLayerUI.h
src/Viewer/Rendering/Editors/Properties/: PropertiesLayer.cpp  PropertiesLayer.h
src/Viewer/Rendering/Editors/Video/: VideoPlaybackSystem.cpp
src/Viewer/Rendering/ImGui/: GuiManager.cpp  GuiManager.h  Layer.h  LayerFactory.cpp  LayerUtils.h
src/Viewer/Rendering/ImGui/AdditionalWindows/: DebugWindow.h  Plot3DWindow.cpp  Plot3DWindow.h  ToolWindow.cpp  ToolWindow.h
src/Viewer/Rendering/RenderResources/: DefaultGraphicsPipeline.h  GraphicsPipeline2D.cpp
src/Viewer/Rendering/RenderResources/3DGS/: SYCLGaussian3D.cpp
src/Viewer/Rendering/RenderResources/DifferentiableRenderer/old/: DiffRenderEntry.h
src/Viewer/Rendering/RenderResources/PathTracer/: Definitions.h  PathTracer.cpp  PathTracer.h  PathTracer2DGSKernel.h  PathTracer2DGSKernelBackward.h  PathTracerMeshKernels.h
src/Viewer/Rendering/RenderResources/PathTracer/libtorch/: PathTracerModule.cpp  PathTracerModule.h  PhotonRebuildFunction.cpp  PhotonRebuildFunction.h  PhotonRebuildModule.cpp  PhotonRebuildModule.h
src/Viewer/Rendering/RenderResources/Raytracer/: Definitions.h  LightTracerKernels.h  PathTracerMeshKernels.h  RayTracer.cpp  RayTracer.h  RayTracerKernels.h
src/Viewer/Scenes/: Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp
src/Viewer/Tools/: Logger.cpp  Logger.h  SYCLDeviceSelector.h  SyclDeviceSelector.h  Utils.h
